--- a/20161101-solitary/index.html
+++ b/20161101-solitary/index.html
@@ -23,7 +23,8 @@
     .metric { font-weight:900; }
 
 
-    .block { height:1px; width:1px; float:left; margin:1px; white-space:normal; border:1px solid #C5C4CE; font-size:0; }
+/*    .block { height:1px; width:1px; float:left; margin:1px; white-space:normal; border:1px solid #C5C4CE; font-size:0; }*/
+    .block { height:7px; width:7px; float:left; margin:0; white-space:normal; border:0.5px solid #fff !important; font-size:0; }
     .confined { background-color:#7767C6; }
     .free { background-color:#C5C4CE; }
     .overlap { background-color:#A59DC9; } 
@@ -42,7 +43,8 @@
     .breaker { padding:1px; }
 
     .year { width:100%; }
-    .month { width:8.1%; border-bottom:1px solid #bbb; display:inline-block; height:11px; }
+    /*.month { width:8.1%; border-bottom:1px solid #bbb; display:inline-block; height:11px; }*/
+    .month { width:8.1%; border-bottom:1px solid #bbb; display:inline-block; height:31px; }
 
     #topmonths .month { width:8.1%; border-bottom:0; display:inline-block; height:auto; font-size:0.6em; color:#bbb; vertical-align:top; }
 
@@ -67,8 +69,9 @@
       #topmonths { display:none; }
       #viewSwitch { float:none; width:100%; }
       #wrapper { width:100%; text-align:center; }
-      .month { height:26px; width:8%; }
+      .month { width:8%; }
       .yearLabel { display:none; }
+      .month { border-bottom:0; }
 
     }
   </style> 
